[B]Version 1.1.143[/B]
- foxnxx - fix playback